--- a/scss/home.scss
+++ b/scss/home.scss
@@ -89,7 +89,7 @@ a{
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
-            background-image: url('/assets/hdme.JPG');
+            background-image: url('../assets/hdme.JPG');
             border-radius: 10px;
 
         }
@@ -121,26 +121,26 @@ a{
 
     .work-1{
       
-        background: url(/assets/screens2.png);  
+        background: url(../assets/screens2.png);  
         background-repeat: no-repeat;
         background-size: 100%;
         
     }
     
     .work-2{
-        background: url(/assets/spinblock.png);  
+        background: url(../assets/spinblock.png);  
         background-repeat: no-repeat;
         background-size: 100%;
     }
 
     .work-3{
-        background: url(/assets/mockup2InterfaceTask.png);  
+        background: url(../assets/mockup2InterfaceTask.png);  
         background-repeat: no-repeat;
         background-size: 100%;
     }
 
     .work-4{
-        background: url(/assets/IKEABUILDIKNG.png);  
+        background: url(../assets/IKEABUILDIKNG.png);  
         background-repeat: no-repeat;
         background-size: 700px;
     }
