--- a/scss/work.scss
+++ b/scss/work.scss
@@ -103,7 +103,7 @@
         padding:0;
 
         // .background{
-        //     background: url(/assets/View3.png);  
+        //     background: url(assets/View3.png);  
         //     background-repeat: no-repeat;
         //     background-size: 100%;
         //     height:100%;
@@ -124,7 +124,7 @@
         padding: 0;
         
         .background2{
-            background: url(/assets/spinblock.png);  
+            background: url(assets/spinblock.png);  
             background-repeat: no-repeat;
             background-size: 100%;
             height:100%;
@@ -136,7 +136,7 @@
         padding: 0;
         
         .background3{
-            background: url(/assets/mockup2InterfaceTask.png);  
+            background: url(assets/mockup2InterfaceTask.png);  
             background-repeat: no-repeat;
             background-size: 100%;
             height:100%;
@@ -149,7 +149,7 @@
         padding: 0;
         
         .background4{
-            background: url(/assets/UserStories.png);  
+            background: url(assets/UserStories.png);  
             background-repeat: no-repeat;
             background-size: 100%;
             height:100%;
