--- a/views/work1.html
+++ b/views/work1.html
@@ -41,7 +41,7 @@
     </section>
     <section class="work-section--picture section">
         <div>
-                <img class="full-image" src="/assets/View3.png">
+                <img class="full-image" src="assets/View3.png">
         </div>
     </section>
 
@@ -51,7 +51,7 @@
                 <p>For the first part of my ideation phase, I created sketches of rough ideas for different pages.</p>
         </div>
         <div>
-            <img class="full-image" src="/assets/sketches.png">
+            <img class="full-image" src="assets/sketches.png">
         </div>
     </section>
 
