--- a/views/work4.html
+++ b/views/work4.html
@@ -37,7 +37,7 @@
     </section>
     <section class="work-section--picture section">
         <div class="picture-container-smaller">
-            <img class="full-image" src="/assets/ikea.jpg">  
+            <img class="full-image" src="assets/ikea.jpg">  
         </div> 
     </section>
 
@@ -61,7 +61,7 @@
         </div>
         
         <div class="center">
-            <img class="full-image" src="/assets/ikearedesignlogos.png">  
+            <img class="full-image" src="assets/ikearedesignlogos.png">  
             <p class="right-caption">Logo Redesign ideas</p>
         </div> 
     </section>
